# TransLib

./: .gitignore  README.md
fixed_precision/dwt/: Makefile  README.md  barrier.c  config.h  data.py  data_generator.py  input_ch2_off.h  kernels.def  kernels.h  main.c  wavelet.c  wavelet.h
fixed_precision/fft-memsave/: README.md
fixed_precision/fft-memsave/fft_mixed_2_4/: CMakeLists.txt  Makefile  data_out.h  fft_mixed.h  fft_mixed_2_4.c  main.c  print_float.c  stats.h  stats_board.h  utils.c
fixed_precision/fft-memsave/fft_mixed_2_8/: CMakeLists.txt  Makefile  config.h  config.sh  count_ops.sh  data_generator.py  data_out.h  data_signal.h  exploration_script.py  fft_mixed.h  fft_mixed_2_8.c  main.c  run_pipeline.sh  stats.h  utils.c
fixed_precision/fft-memsave/fft_radix2/: CMakeLists.txt  Makefile  bit_reversal.m  bit_reverse.h  create_trace.sh  data_out.h  data_signal.h  fft.h  fft_radix2.c  main.c  out-f.s  out.s  out.txt  twiddle_factor.h  twiddles.m  utils.c
fixed_precision/fft-memsave/fft_radix4/: CMakeLists.txt  Data_Out.h  Makefile  bit_reverse.h  data_signal.h  fft.h  fft_radix4.c  main.c  twiddle_factor.h  twiddles.m  utils.c
fixed_precision/fft-memsave/fft_radix8/: CMakeLists.txt  Makefile  bit_reverse.h  fft.h  fft_radix8.c  main.c  twiddle_factor.h  utils.c
fixed_precision/kmeans/: Makefile  README.md  config.h  data_def.h  data_generator.py  kmeans.c  main.c  out_ref.h  stats.h
mixed_precision/: help.txt
mixed_precision/SVM/: CMakeLists.txt  Makefile  README.md  config.sh  configs.h  data_generator.py  defines.h  exploration_script.py  main.c  modelSVM.h  plp_SVM_predict.c  plp_SVM_predict.h  plp_dot_prod_f32.c  plp_dot_prod_f32.h  plp_exp.c  plp_exp.h
mixed_precision/convolutioncl/: CMakeLists.txt  Makefile  README.md  config.h  config.sh  conv_kernels.c  convolution.h  data.h  data_generator.py  exploration_script.py  main.c  run_pipeline.sh  untitled.c
mixed_precision/dwt/: CMakeLists.txt  Makefile  README.md  barrier.h  config.h  config.sh  data.py  data_generator.py  exploration_script.py  fp_quantization.py  input_ch2_off.h  kernels.def  main.c  stats.h  wavelet.c  wavelet.h
mixed_precision/fir/: CMakeLists.txt  Makefile  README.md  config.h  config.sh  data.h  data_generator.py  exploration_script.py  fir_kernel.c  main.c
mixed_precision/fir/ECG_processing_pan_tompkins/: CMakeLists.txt  Makefile  README.md  bartolini.txt  benedetta.txt  convolution.c  data.h  ecg_processing.c  ecg_processing.h  helper_func.py  kernels.def  nonstreaming.py  normalize.c  ref.h  single_convolution.c  streaming.py
mixed_precision/fir/ECG_processing_pan_tompkins/dataset/: ANadalini.h  DavideN.h  DavideN2.h  Lo.h  Naza.h  ahmad.h  alberto.h  amir.h  angelo.h  antonella.h  bartolini.h  bartolinicaffe.h  benedetta1.h  conti.h  giovanni.h  giuseppe.h  mahyar.h  manu.h  mattia.h  mattia2.h  mohsen.h  mohsen2.h  simone.h  victor.h
mixed_precision/kmeans/: CMakeLists.txt  Makefile  README.md  config.h  config.sh  data_def.h  data_generator.py  exploration_script.py  kmeans.c  main.c  out_ref.h
mixed_precision/kmeans/dataset/: data.csv  testing.csv  training.csv
mixed_precision/matmul/: CMakeLists.txt  Makefile  README.md  config.h  config.sh  data.h  data_generator.py  exploration_script.py  main.c  matmul.c  stats_board.h  support_func.c
utils/: fma_rounding.py  helper_functions.py
